<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="action_bar" type="id" />
    <item name="action_bar_container" type="id" />
</resources>