<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginOrCreateAccountActivity"
    android:orientation="vertical"
    >

    <Button
        android:id="@+id/login"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:text="Login (ExistingUsers)"
        android:layout_marginTop="250dp"/>

    <Button
        android:id="@+id/createaccount"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:text="@string/create_account"
        android:layout_marginTop="10dp"/>
</LinearLayout>







